# firzah_ua

./: firzah_ua.py  pyproject.toml  setup..py  workflow.yml
user_agent/: __init__.py
