[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firzah_ua"
version = "0.0.1"
authors = [
  { name="FIRandZAH", email="firmanalayk@gmail.com" }
]
description = "Library Python sederhana untuk mengelola user agent"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FIRandZAH/firzah_ua"
Issues = "https://github.com/FIRandZAH/firzah_ua/issues"
